--- a/personal_website/index.htm
+++ b/personal_website/index.htm
@@ -8,10 +8,10 @@
 <body>
 
     <div class="hello">
-          <a style="color: black;"href="college.htm"><h2>Contact Me</h2></a>
+          <a style="color: black;"href="./pages/college.htm"><h2>Contact Me</h2></a>
     </div>
     <div class="hello2">
-      <a style="color: black;"href="school.htm"><h2>About</h2></a>
+      <a style="color: black;"href="./pages/school.htm"><h2>About</h2></a>
 </div>
 
   <div class="hello3">
@@ -128,7 +128,7 @@
 
     .table{
       position: absolute;
-      top:90%;
+      top:93%;
       right:27%;
     }
 
@@ -210,7 +210,7 @@
     }
     .bye{
       position: absolute;
-        top:110%;
+        top:115%;
         right: 25%;
         text-align: center;
     }
