--- a/personal_website/index.htm
+++ b/personal_website/index.htm
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Nishant</title>
+        <link rel="icon" type="image/x-icon" href="./images/gpm.jpeg">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
@@ -40,7 +41,7 @@
   <div class="photo3">
   <img src="./images/20220115_162910.jpg" width="280" height="350" >
    </div> 
-
+<br>
   <div class="table">
   <table>
     <tr>
@@ -121,14 +122,14 @@
 
   .skill{
     position: absolute;
-      top:139%;
+      top:142%;
       left:50%;
   }
 
 
     .table{
       position: absolute;
-      top:93%;
+      top:97%;
       right:27%;
     }
 
@@ -181,23 +182,23 @@
     }
     .hello4{
       position: absolute;
-      top:139%;
+      top:142%;
       left:70%;
     }
     .hello5{ 
       position: absolute;
-      top:130%;
+      top:135%;
       left:13%;
     }
     .hello6{ 
       position: absolute;
-      top:130%;
+      top:135%;
       left:44%;
     }
 
     .hello7{ 
       position: absolute;
-      top:130%;
+      top:135%;
       left:68%;
     }
 
@@ -210,7 +211,7 @@
     }
     .bye{
       position: absolute;
-        top:115%;
+        top:119%;
         right: 25%;
         text-align: center;
     }
@@ -221,7 +222,7 @@
     }
     .bye3{
       position: absolute;
-        top:139%;
+        top:144%;
         left: 17%;
     }
     .data2{
