--- a/anokha/index.html
+++ b/anokha/index.html
@@ -21,7 +21,7 @@
             <h2 style="font-size: 50px; color: white;">10th National Level<span style="color: peru;"> Techfest</span></h2><br>
             <h2 style="color: white;">13-16 March 2023. <span style="color: peru;"> Amrita Vishwa Vidhyapeetham</span></h2><br><br>
             <img src="https://pbs.twimg.com/media/Fgm0jREaMAY_NFL.jpg" width="650" height="400"><br><br><br><br>
-            <button class="button1 button4" ><a href="register.htm"  style="text-decoration:none" style="color: black;">Register</a></button>
+            <button class="button1 button4" ><a href="html/register.html"  style="text-decoration:none" style="color: black;">Register</a></button>
     <br><br><br><br><br><br><br><br>
     <h2 class=avout style="color: white;">About The Event</h2>
     <p class=avout1 style="color: white;">Anokha Techfest, the annual event of Amrita School of Engineering, Coimbatore provides an unique opportunity for students</p>
