--- a/anokha/html/register.html
+++ b/anokha/html/register.html
@@ -5,7 +5,7 @@
 
     <body style="background-color:black;">
       <div class="data1">
-        <img src="Amrita-vishwa-vidyapeetham-color-logo.png" width="255" height="100">
+        <img src="../Amrita-vishwa-vidyapeetham-color-logo.png" width="255" height="100">
     </div>
     <br><br><br><br>
         <br><br>
