--- a/anokha/index.html
+++ b/anokha/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+        <title>Home</title>
+        <link rel="icon" type="image/x-icon" href="Amrita-vishwa-vidyapeetham-color-logo.png">
+    </head>
     <body style="background-color: black;">
         
         <div class="data1">
@@ -16,6 +20,9 @@
             </div>
         -->
         <Center>
+            <div class="contact">
+                <a href="html/contact.htm">Contact Us</a>
+            </div>
             <br><br><br><br><br><br><br>
             <h1 style="color: white;">Anokha Tech <span style="color: peru;">Fest'23</span>
             <h2 style="font-size: 50px; color: white;">10th National Level<span style="color: peru;"> Techfest</span></h2><br>
@@ -197,6 +204,12 @@ padding: 30px;
 .button4 {border-radius: 12px;}
 .button5 {border-radius: 50%;}
 
+.contact{
+    position: absolute;
+    right: 5%;
+    top:10%;
+    color: peru;
+}
 
 html {
 height: 110%;
