--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -63,7 +63,7 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
 
-      <a href="register.html" class="get-started-btn scrollto">Log In</a>
+      <a href="login.htm" class="get-started-btn scrollto">Log In</a>
 
     </div>
   </header><!-- End Header -->
@@ -158,11 +158,6 @@
         <div class="section-title">
           <h2>Contact</h2>
           <p>Contact Us</p>
-        </div>
-
-        <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3917.801510460118!2d76.89843385029971!3d10.902684359793886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba85c95d3e828eb%3A0x2785cb4510629029!2sAmrita%20Vishwa%20Vidyapeetham%2C%20Coimbatore%20campus!5e0!3m2!1sen!2sin!4v1671473122670!5m2!1sen!2sin" frameborder="0" allowfullscreen></iframe>
-          
         </div>
 
         <div class="row mt-5">
