--- a/Mini-Project/tandc.htm
+++ b/Mini-Project/tandc.htm
@@ -7,7 +7,7 @@
       <meta property="og:title" content="FriendFinder - terms">  <meta property="og:site_name" content="FriendFinder"> <meta property="og:url" content="https://bumble.com/en-us/terms"/> <meta property="og:image" content="https://eu1.bumbcdn.com/i/big/assets/static_images/bumble-fb-share.png?v2">    <meta name="twitter:card" content="app">
       <meta name="twitter:site" content="@bumble">     <meta name="twitter:app:id:iphone" content="930441707"> <meta name="twitter:app:name:iphone" content="FriendFinder - Changing the rules of the game.">        
       <title>FriendFinder - terms</title> <link rel="stylesheet" type="text/css" href="https://eu1.bumbcdn.com/i/aco/bumble.com/v2/-/moxie/new/css/hotornot_v2/base-ltr.1e05b4eec1088dc4a56a.css" media="screen,projection,print"> 
-      <link rel="stylesheet" type="text/css" href="https://eu1.bumbcdn.com/i/aco/bumble.com/v2/-/moxie/new/css/hotornot_v2/fonts.9794f648bc9b91e97d9d.css" media="screen,projection,print"> 
+      <!-- <link rel="stylesheet" type="text/css" href="https://eu1.bumbcdn.com/i/aco/bumble.com/v2/-/moxie/new/css/hotornot_v2/fonts.9794f648bc9b91e97d9d.css" media="screen,projection,print"> -->
       <link rel="shortcut icon" type="image/x-icon" href="assets/img/01e0dfd5-9ee5-41e9-afc7-d4703c6e6218.jpeg"> 
       <!-- Preload app files -->  
       <link rel="prefetch" href="https://eu1.bumbcdn.com/i/aco/bumble.com/v2/-/moxie/dist/main.52b5b61515c74f1fc066.css"> <link rel="prefetch" href="https://eu1.bumbcdn.com/i/aco/bumble.com/v2/-/moxie/dist/manifest.84f395f8c12c115f4cb6.js">
@@ -101,3 +101,9 @@
                     <p>Scraping or replicating any part of the App without our prior consent is expressly prohibited. This includes by any means (automated or otherwise) other than through our currently available, published interfaces - unless you have been specifically allowed to do so in a separate agreement with us.</p>
                     <h2>4. PRIVACY </h2> <p>For information about how the FriendFinder Group collects, uses, and shares your personal data, please check out our <a href="/en-us/privacy">Privacy Policy</a>. By using FriendFinder, you acknowledge that we may use such data in accordance with our <a href="/en-us/privacy">Privacy Policy</a>.</p>
                     
+
+</html>
+
+<style>
+    @font-face{font-style:normal;font-weight:400;font-family:"Circular20";src:url(/i/v2/-/moxie/new/css/hotornot_v2/assets/circular20/Circular20WebCyr-Book.45f77a0cfe4dee8b491a.woff2) format("woff2");font-display:fallback}@font-face{font-style:normal;font-weight:600;font-family:"Circular20";src:url(/i/v2/-/moxie/new/css/hotornot_v2/assets/circular20/Circular20WebCyr-Bold.32c99db8610fe07ee74a.woff2) format("woff2");font-display:fallback}@font-face{font-style:normal;font-weight:700;font-family:"Circular20";src:url(/i/v2/-/moxie/new/css/hotornot_v2/assets/circular20/Circular20WebCyr-Black.2c2e2a31fd079a2f15a7.woff2) format("woff2");font-display:fallback}
+</style>
