--- a/Mini-Project/adwaith.htm
+++ b/Mini-Project/adwaith.htm
@@ -17,56 +17,55 @@
 		<title>FriendFinder</title>
 	</head>
 	<body>
-        <div class="message">
-        <i class="fa-solid fa-house" style="font-size:30px ;color: white;"></i>&nbsp;&nbsp;&nbsp;
-        <i class="fa fa-heart" style="font-size:30px; color: white;"></i>&nbsp;&nbsp;&nbsp;
-        <a href="msg.htm"><i class='fab fa-facebook-messenger' style='font-size:30px ; color: white;'></i></a>&nbsp;&nbsp;&nbsp;
-        <a href="profile.htm"><i class="fa-solid fa-user" style='font-size:30px ; color: white;'></i></a>
-        </div>
+    <div class="message">
+      <i class="fa-solid fa-house" style="font-size:30px ;color: white;"></i>&nbsp;&nbsp;&nbsp;
+      <i class="fa fa-heart" style="font-size:30px; color: white;"></i>&nbsp;&nbsp;&nbsp;
+      <a href="msg.htm"><i class='fab fa-facebook-messenger' style='font-size:30px ; color: white;'></i></a>&nbsp;&nbsp;&nbsp;
+      <a href="profile.htm"><i class="fa-solid fa-user" style='font-size:30px ; color: white;'></i></a>
+      </div>
 		<div class="container">
 			<div class="content">
 				<div class="card">
 					<div class="user">
 						<img
 							class="user"
-							src="vitalian.jpeg"
+							src="adwaith.jpeg"
 							alt=""
 						/>
 						<div class="profile">
-							<div class="name">Vitalian <span style="color: peru;">19</span></div>
+							<div class="name">Adwaith<span style="color: peru;">19</span></div>
 							<div class="local">
 								<i class="fas fa-map-marker-alt"></i>
-								<span>Thoothukudi</span>
+								<span>Chennai</span>
 							</div>
                         </div>   
                         <ul>
-                            <li>Kadal Raasa Naan🤌🏼✨</li>
-                            <li>Photographer🫶</li>
-                            <li>Movies🔥</li>
+                            <li>Creep💀</li>
+                            <li>Anime🔥</li>
                         </ul>
                         <br>
                         <div class="user">
                             <img
                                 class="user"
-                                src="vitalian2.jpeg"
+                                src="adwaith2.jpeg"
                                 alt=""
                             /> 
                             <br><br><br><br>
                         <div class="user">
                             <img
                                 class="user"
-                                src="vitalian3.jpeg"
+                                src="adwaith3.jpeg"
                                 alt=""
                             />
 					</div>
 				</div>
 				<div class="buttons">
 					<div class="no">
-						<a href="niran.htm"><i class="fas fa-times"></i> </a>
+						<i class="fas fa-times"><a href=""></a></i>
 					</div>
 					
 					<div class="heart">
-            <a href="niran.htm"><i class="fas fa-heart"></i> </a>
+						<i class="fas fa-heart"></i>
 					</div>
 				</div>
 			</div>
@@ -124,8 +123,8 @@
           </div>
         </div>
   </footer>-->
-  <footer id ="footer">
-    <div class= "down">
+  <footer id="footer">
+  <div class= "down">
     &copy; Copyright <strong><span>FriendFinder</span></strong>. All Rights Reserved
     </div>
   </footer>
@@ -156,6 +155,12 @@ p{
 	height: 100%;
 	min-height: 100vh;
 	border-right: 1px solid #e1e1e1;
+}
+#footer {
+  background: white;
+  padding: 0 0 30px 0;
+  color: black;
+  font-size: 14px;
 }
 .content {
 	width: 100%;
@@ -198,6 +203,18 @@ p{
   font-size:15px;
   line-height:24px;
   color:#737373;
+}
+.down{
+  background-color: peru;
+  position: absolute;
+  bottom: -140%;
+  left: 1%;
+  text-align: center;
+  color: black;
+  margin-top: 100px;
+  width: 100%;
+  padding: 100px 40%;
+  display: flex;
 }
 .site-footer hr
 {
@@ -321,18 +338,6 @@ p{
 {
   color:#fff;
   background-color:#29aafe
-}
-.down{
-  background-color: peru;
-  position: absolute;
-  bottom: -140%;
-  left: 1%;
-  text-align: center;
-  color: black;
-  margin-top: 100px;
-  width: 100%;
-  padding: 100px 40%;
-  display: flex;
 }
 .social-icons.size-sm a
 {
@@ -464,159 +469,5 @@ p{
 .heart i {
     color: #11e298;
 	font-size: 32px;
-}
-#footer {
-  background: white;
-  padding: 0 0 30px 0;
-  color: black;
-  font-size: 14px;
-}
-
-#footer .footer-top {
-  background: #151515;
-  border-bottom: 1px solid #222222;
-  padding: 60px 0 30px 0;
-}
-
-#footer .footer-top .footer-info {
-  margin-bottom: 30px;
-}
-
-#footer .footer-top .footer-info h3 {
-  font-size: 28px;
-  margin: 0 0 20px 0;
-  padding: 2px 0 2px 0;
-  line-height: 1;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-#footer .footer-top .footer-info h3 span {
-  color: #ffc451;
-}
-
-#footer .footer-top .footer-info p {
-  font-size: 14px;
-  line-height: 24px;
-  margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
-  color: #fff;
-}
-
-#footer .footer-top .social-links a {
-  font-size: 18px;
-  display: inline-block;
-  background: #292929;
-  color: #fff;
-  line-height: 1;
-  padding: 8px 0;
-  margin-right: 4px;
-  border-radius: 4px;
-  text-align: center;
-  width: 36px;
-  height: 36px;
-  transition: 0.3s;
-}
-
-#footer .footer-top .social-links a:hover {
-  background: #ffc451;
-  color: #151515;
-  text-decoration: none;
-}
-
-#footer .footer-top h4 {
-  font-size: 16px;
-  font-weight: 600;
-  color: #fff;
-  position: relative;
-  padding-bottom: 12px;
-}
-
-#footer .footer-top .footer-links {
-  margin-bottom: 30px;
-}
-
-#footer .footer-top .footer-links ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-#footer .footer-top .footer-links ul i {
-  padding-right: 2px;
-  color: #ffc451;
-  font-size: 18px;
-  line-height: 1;
-}
-
-#footer .footer-top .footer-links ul li {
-  padding: 10px 0;
-  display: flex;
-  align-items: center;
-}
-
-#footer .footer-top .footer-links ul li:first-child {
-  padding-top: 0;
-}
-
-#footer .footer-top .footer-links ul a {
-  color: #fff;
-  transition: 0.3s;
-  display: inline-block;
-  line-height: 1;
-}
-
-#footer .footer-top .footer-links ul a:hover {
-  color: #ffc451;
-}
-
-#footer .footer-top .footer-newsletter form {
-  margin-top: 30px;
-  background: #fff;
-  padding: 6px 10px;
-  position: relative;
-  border-radius: 4px;
-}
-
-#footer .footer-top .footer-newsletter form input[type=email] {
-  border: 0;
-  padding: 4px;
-  width: calc(100% - 110px);
-}
-
-#footer .footer-top .footer-newsletter form input[type=submit] {
-  position: absolute;
-  top: 0;
-  right: -2px;
-  bottom: 0;
-  border: 0;
-  background: none;
-  font-size: 16px;
-  padding: 0 20px;
-  background: #ffc451;
-  color: #151515;
-  transition: 0.3s;
-  border-radius: 0 4px 4px 0;
-}
-
-#footer .footer-top .footer-newsletter form input[type=submit]:hover {
-  background: #ffcd6b;
-}
-
-#footer .copyright {
-  text-align: center;
-  padding-top: 30px;
-}
-
-#footer .credits {
-  padding-top: 10px;
-  text-align: center;
-  font-size: 13px;
-  color: #fff;
-}
-#hero .containers {
-  position: relative;
-  padding-top: 74px;
-  text-align: center;
 }
 </style>
