--- a/Mini-Project/index.html
+++ b/Mini-Project/index.html
@@ -46,7 +46,7 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><img src="./assets/img/amrita.png"><span>.</span></a></h1>
+      <h1 class="logo me-auto me-lg-0"><img src=""><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></a></h1>
       <!--<h1 class="logo me-auto me-lg-0"><a href="index.html">Gp<span>.</span></a></h1>-->
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -224,11 +224,15 @@
     <div class="footer-top">
       <div class="container">
         <div class="row">
+        </div>
 
           
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>FriendFinder</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>UI Mini Project</span></strong>. All Rights Reserved<br>
+        Nishant V - CB.EN.U4CYS21049<br>
+          Monish T - CB.EN.U4CYS21045<br>
+          Jasir Faiez - CB.EN.U4CYS21043
       
   </footer><!-- End Footer -->
 
