--- a/Mini-Project/adwaith.htm
+++ b/Mini-Project/adwaith.htm
@@ -19,7 +19,7 @@
 	<body>
     <div class="message">
       <i class="fa-solid fa-house" style="font-size:30px ;color: white;"></i>&nbsp;&nbsp;&nbsp;
-      <i class="fa fa-heart" style="font-size:30px; color: white;"></i>&nbsp;&nbsp;&nbsp;
+      <a href="li.html"><i class="fa fa-heart" style="font-size:30px; color: white;"></i></a>&nbsp;&nbsp;&nbsp;
       <a href="msg.htm"><i class='fab fa-facebook-messenger' style='font-size:30px ; color: white;'></i></a>&nbsp;&nbsp;&nbsp;
       <a href="profile.htm"><i class="fa-solid fa-user" style='font-size:30px ; color: white;'></i></a>
       </div>
